AOT map does not include unregistered classes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 26
    • Component/s: hotspot
    • b21

      When running -Xlog:aot+map with an existing AOT cache, the unregistered classes are missing from the output.

      Fix suggested by [~asmehra]

      diff --git a/src/hotspot/share/classfile/systemDictionaryShared.cpp b/src/hotspot/share/classfile/systemDictionaryShared.cpp
      index b092e71f4e7..7e71dbefbfb 100644
      --- a/src/hotspot/share/classfile/systemDictionaryShared.cpp
      +++ b/src/hotspot/share/classfile/systemDictionaryShared.cpp
      @@ -1420,6 +1420,9 @@ void SystemDictionaryShared::get_all_archived_classes(bool is_static_archive, Gr
         get_archive(is_static_archive)->_builtin_dictionary.iterate([&] (const RunTimeClassInfo* record) {
             classes->append(record->klass());
           });
      + get_archive(is_static_archive)->_unregistered_dictionary.iterate([&] (const RunTimeClassInfo* record) {
      + classes->append(record->klass());
      + });
       }
       

            Assignee:
            Ioi Lam
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: